force-app/main/default/objects/Pais_R__c/Pais_R__c.object-meta.xml
<CustomObject>
    <label>Pais_R</label>
    <nameField>
        <label>Nombre de Pais</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Paises_R</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>