force-app/main/default/objects/Pais_R__c/fields/codigo__c.field-meta.xml
<CustomField>
    <fullName>codigo__c</fullName>
    <label>codigo</label>
    <length>15</length>
    <type>Text</type>
</CustomField>