force-app/main/default/objects/Pais_R__c/fields/nacionalidad__c.field-meta.xml
<CustomField>
    <fullName>nacionalidad__c</fullName>
    <label>nacionalidad</label>
    <length>100</length>
    <type>Text</type>
</CustomField>