force-app/main/default/objects/Pais_R__c/fields/nombre__c.field-meta.xml
<CustomField>
    <fullName>nombre__c</fullName>
    <label>nombre</label>
    <length>100</length>
    <type>Text</type>
</CustomField>