force-app/main/default/objects/Pais_R__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>nacionalidad__c</columns>
    <columns>codigo__c</columns>
    <columns>nombre__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>